--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   height: 100vh;
   font-family: open sans;
-  color: #10214e;
+  color: #ffffff;
 }
 
 article {
@@ -26,7 +26,7 @@ article {
   min-width: 20em;
   border-radius: 1rem;
   background: rgb(0,239,255);
-  background: linear-gradient(0deg, rgba(0,239,255,1) 40%, #4e54c8 100%);
+  background: linear-gradient(0deg, rgb(43, 50, 51) 40%, #2e3053 100%);
   box-shadow: 0 0 20px 20px rgba(0,0,0,.1);
   transition: .25s;
 }
@@ -105,11 +105,13 @@ dl {
   background: rgb(255,255,255);
 }
 
-dt {
+
+dt, p {
   margin-top: .25rem;
   padding-top: .25rem;
   border-top: 1px solid rgba(0,0,0,0.3);
   font-weight: bold;
+  color: blue
 }
 dt:nth-of-type(1) {
   grid-area: html-dt;
@@ -118,6 +120,7 @@ dt:nth-of-type(2) {
   grid-area: css-dt;
   transform: translateY(1rem);
 }
+
 dt:nth-of-type(3) {
   grid-area: js-dt;
 }
